fix: scrollbar

--- a/app/products/[id]/components/ProductImages.module.scss
+++ b/app/products/[id]/components/ProductImages.module.scss
@@ -37,17 +37,20 @@
   width: 300px;
   margin-top: 0.4rem;
   overflow-x: auto;
+  padding-bottom: 0.4rem;
 
-  ::webkit-scrollbar {
-    width: 10px;
+  &::-webkit-scrollbar {
+    height: 12px;
   }
-  ::-webkit-scrollbar-track {
+  &::-webkit-scrollbar-track {
     background-color: #f1f1f1;
   }
-  ::-webkit-scrollbar-thumb {
+  &::-webkit-scrollbar-thumb {
     background: #888;
+    border-radius: 6px;
+    height: 1px;
   }
-  ::-webkit-scrollbar-thumb:hover {
+  &::-webkit-scrollbar-thumb:hover {
     background: #555;
   }
 
